- INTERCEPT_UNKNOWN_COMMANDS is a boolean specifying if an external script
  wishes to handle unrecognized chat commands. This would allow hooking
  arbitrary things like /foobarz or /mode ctf
- CONSOLE_LADDER_LOG boolean places the ladderlog on stdout prefixed with
  "[L] "
- PLAYER_MESSAGE <user ID or name> <Message>: Like /msg, but from the 
  console

  Featurelets:
- A subculture list for server groups that are not managed by our main master servers
- A friends list and filter for the server browser that shows you only servers with
  your friends on them.
- The client now can handle network traffic while it is waiting for the graphics
  card to swap buffers.
- The dedicated server no longer uses a fixed delay, but a select() call (that
  returns when network data arrives) to idle. When data arrives, it does 
  the minimum amount of work before it sends out the responses, resulting in
  lower latency. It is now safe to decrease DEDICATED_FPS to 20 or 10, latency
  is no longer influenced by that setting.
- Game level lag compensation. When a command arrives from a client that is delayed,
  it is backdated to the time it was issued, provided enough "lag credit" is left.
  The client is informed of the delay so it can compensate in the future, which it does
  by forging the game timer.
- Nonnormalized axes and axes with odd turning directions are now properly supported
- The camera has a memory which player you like to watch. Every time you manually switch
  the camera and your favorite player is not dead, the favorite is set to the currently 
  watched player. The next time the camera doesn't know what to watch, your favorite
  will be selected.
- Players leaving to spectator mode with <0.2.8.2 clients are handled like
  spectators of 0.2.8.2 clients: they stay visible to the others.
- Kick statistics are now persistent across server runs.
- MESSAGE_OF_DAY is now displayed fullscreen if both server and client support it