@@ -62,7 +62,6 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #include "rSDL.h"
 #endif
 
-
 // data structure for command line parsing
 class gMainCommandLineAnalyzer: public tCommandLineAnalyzer
 {
